[package]
name = "rusty-fuse"
version = "0.7.0"
authors = ["William R. Fraser <wfraser@codewise.org>", "Daiki Naruse <naruse147@gmail.com>"]
repository = "https://github.com/wfraser/fuse-mt"
description = "A higher-level FUSE filesystem library with multi-threading and inode->path translation."
categories = ["filesystem"]
keywords = ["fuse", "filesystem"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
fuser = "0.15"
libc = "0.2"
log = "0.4"
threadpool = "1.8"

[workspace]
members = [".", "example"]
